syntax = "proto3";

message ParsedPropertyData {
    string titulo = 1;
    string tipo = 2;
    string subtipo = 3;
    float valor = 4;
    float iptu = 5;
    float condominio = 6;
    int32 quartos = 7;
    int32 area = 8;
    int32 vagas_garagem = 9;
    int32 banheiros = 10;
    string cidade = 11;
    string bairro = 12;
    string regiao = 13;
}